--- a/Progbase3/MoiveHubSystem/App.xaml
+++ b/Progbase3/MoiveHubSystem/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="MovieHubManagmentSystem.App"
+﻿<Application x:Class="MoiveHubSystem.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MovieHubManagmentSystem"
+             xmlns:local="clr-namespace:MoiveHubSystem"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-        <ResourceDictionary Source="StyleSheet.xaml" />
+        <ResourceDictionary Source="StyleSheet.xaml"/>
     </Application.Resources>
 </Application>
