--- a/Progbase3/MoiveHubSystem/StyleSheet.xaml
+++ b/Progbase3/MoiveHubSystem/StyleSheet.xaml
@@ -10,4 +10,16 @@
         <Setter Property="Padding" Value="15"/>
     </Style>
 
+    <Style TargetType="Label" BasedOn="{StaticResource ResourceKey=BaseFont}">
+        <Setter Property="Margin" Value="5 0"/>
+    </Style>
+
+    <Style TargetType="TextBox" BasedOn="{StaticResource ResourceKey=BaseFont}">
+        <Setter Property="Margin" Value="5 0"/>
+    </Style>
+
+    <Style TargetType="TextBlock" BasedOn="{StaticResource ResourceKey=BaseFont}">
+        <Setter Property="Margin" Value="5 0"/>
+    </Style>
+
 </ResourceDictionary>
