--- a/Progbase3/MoiveHubSystem/Views/AddFilmWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/AddFilmWindow.xaml
@@ -3,10 +3,80 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MoiveHubSystem.Views"
+        xmlns:local="clr-namespace:MoiveHubSystem.Views" 
+        xmlns:viewmodels="clr-namespace:MoiveHubSystem.ViewModels"
         mc:Ignorable="d"
-        Title="AddFilmWindow" Height="450" Width="800">
-    <Grid>
-        
+        x:Name="addFilmWnd"
+        Title="Add Film Window" Height="550" Width="800" MinHeight="550" MinWidth="800">
+    <Window.DataContext>
+        <viewmodels:AddFilmViewModel/>
+    </Window.DataContext>
+    
+    <Grid x:Name="mainGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+
+        <DockPanel x:Name="fieldPanel" Grid.Column="0">
+            <Label DockPanel.Dock="Top" Content="Title: "/>
+            <TextBox DockPanel.Dock="Top" x:Name="titleField" Text="{Binding Title}"/>
+
+            <Label DockPanel.Dock="Top" Content="Release date: "/>
+            <DatePicker DockPanel.Dock="Top" x:Name="officialReleaseDateField" SelectedDate="{Binding OfficialReleaseDate}"/>
+
+            <Label DockPanel.Dock="Top" Content="Slogan: "/>
+            <TextBox DockPanel.Dock="Top" x:Name="sloganField" Text="{Binding Slogan}"/>
+
+            <Label DockPanel.Dock="Top" Content="Story Line:" />
+            <ScrollViewer DockPanel.Dock="Top">
+                <TextBox x:Name="storyLineField" Text="{Binding StoryLine}" TextWrapping="WrapWithOverflow"/>
+            </ScrollViewer>
+
+
+            <Label DockPanel.Dock="Top" Content="Cast: "/>
+            <ListBox x:Name="castField" ItemsSource="{Binding AddedCast}"  SelectedItem="{Binding SelectedActor}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding}">
+                            <TextBlock.InputBindings>
+                                <MouseBinding MouseAction="LeftDoubleClick"
+                                  Command="{Binding DataContext.ShiftFromAddedCast, RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}"
+                                  CommandParameter="{Binding Id}" />
+                            </TextBlock.InputBindings>
+                        </TextBlock>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+
+
+        </DockPanel  >
+        <StackPanel Grid.Column="1"   VerticalAlignment="Center">
+            <ListBox DockPanel.Dock="Top" Margin="10" x:Name="actorsList" ItemsSource="{Binding PickList}" SelectedItem="{Binding SelectedActor}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding}">
+                            <TextBlock.InputBindings>
+                                <MouseBinding MouseAction="LeftDoubleClick"
+                                  Command="{Binding DataContext.ShiftToAddedCast, RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}"
+                                  CommandParameter="{Binding Id}" />
+                            </TextBlock.InputBindings>
+                        </TextBlock>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <WrapPanel  DockPanel.Dock="Top" Margin="10">
+                <Button Margin="5 0" Content="Prev Page" Command="{Binding LoadPrevPage}"/>
+                <Button Margin="5 0" Content="Next  Page" Command="{Binding LoadNextPage}"/>
+            </WrapPanel>
+        </StackPanel>
+        <Button Margin="10" Grid.Row="1" Grid.ColumnSpan="2" Content="Accept" CommandParameter="{Binding ElementName=addFilmWnd}" Command="{Binding AcceptNewFilm}"/>
+
     </Grid>
 </Window>
