--- a/Progbase3/MoiveHubSystem/Views/AddFilmWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/AddFilmWindow.xaml
@@ -40,7 +40,7 @@
 
 
             <Label DockPanel.Dock="Top" Content="Cast: "/>
-            <ListBox x:Name="castField" ItemsSource="{Binding AddedCast}"  SelectedItem="{Binding SelectedActor}">
+            <ListBox x:Name="castField" ItemsSource="{Binding Cast}"  SelectedItem="{Binding SelectedActor}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding}">
