--- a/Progbase3/MoiveHubSystem/Views/EditFilmWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/EditFilmWindow.xaml
@@ -35,7 +35,7 @@
 
 
             <Label DockPanel.Dock="Top" Content="Cast: "/>
-            <ListBox x:Name="castField" ItemsSource="{Binding AddedCast}"  SelectedItem="{Binding SelectedActor}">
+            <ListBox x:Name="castField" ItemsSource="{Binding Cast}"  SelectedItem="{Binding SelectedActor}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding}">
