--- a/Progbase3/MoiveHubSystem/App.xaml
+++ b/Progbase3/MoiveHubSystem/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MoiveHubSystem"
-             StartupUri="Views/FilmsWindow.xaml">
+             StartupUri="Views/ActorsWindow.xaml">
     <Application.Resources>
         <ResourceDictionary Source="StyleSheet.xaml"/>
     </Application.Resources>
